แก้ไขระบบค้นหาข้อมูลซ่อมบบำรุง - close #281
